fix visibilité du slogan format smartphone

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10903,7 +10903,8 @@ label {
 
 @media (max-width: 767.98px) {
   .carousel-title-wrapper .carousel-slogan {
-    font-size: 6px;
+    font-size: 9px;
+    margin-top: 70px;
   }
 }
 
