--- a/resources/sass/blocks/_carousel.scss
+++ b/resources/sass/blocks/_carousel.scss
@@ -53,7 +53,8 @@
             font-size: 10px;
         }
         @include media-breakpoint-down(sm){
-            font-size: 6px;
+            font-size: 9px;
+            margin-top: 70px;
         }
     }
     
